--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div>
+<!-- <div>
         <h3>.</h3>
 
 </div>
@@ -24,7 +24,11 @@
   <a href="{%url 'dber-login'%}" class="btn btn-primary">LogIn</a>
 </h6>
 </div>
-</form>
+</form> -->
+<div>
+<h5>.</h5>
+</div>
+<h1>Aur Tingu Kaisi Hai</h1>
 
 
 {% endblock %}
