--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<!-- <div>
+<div>
         <h3>.</h3>
 
 </div>
@@ -24,15 +24,8 @@
   <a href="{%url 'dber-login'%}" class="btn btn-primary">LogIn</a>
 </h6>
 </div>
-</form> -->
-<div>
-<h5>.</h5>
-</div>
-<div>
-<h5>.</h5>
-</div>
-<h1>Aur Chudel Kaisi Hai</h1>
-<h4>ghoor kya rahe ho ye harsh ki hi website hai</h4>
+</form>
+
 
 
 {% endblock %}
